AP-14560: Use ProcessBuilder instead of Runtime#exec
AP-14560 (Windows Defender check may prevent KNIME startup)